correct bug in directory for StrengthEvaluator2

--- a/PokerAIShort/PokerAI10BB.ipynb
+++ b/PokerAIShort/PokerAI10BB.ipynb
@@ -10,12 +10,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-01-13 19:35:00.391611: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-01-13 19:35:00.391654: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2022-01-13 19:35:03.788458: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2022-01-13 19:35:03.788487: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2022-01-13 19:35:03.788510: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (cromi-Lenovo-V15-ADA): /proc/driver/nvidia/version does not exist\n",
-      "2022-01-13 19:35:03.788730: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-01-14 00:50:19.214821: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-01-14 00:50:19.214851: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2022-01-14 00:50:20.837616: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2022-01-14 00:50:20.837654: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2022-01-14 00:50:20.837682: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (cromi-Lenovo-V15-ADA): /proc/driver/nvidia/version does not exist\n",
+      "2022-01-14 00:50:20.838378: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -174,7 +174,7 @@
     {
      "data": {
       "text/plain": [
-       "<Cluster(cluster_id='1642098916-v8xd', profile='default', controller=<running>, engine_sets=['1642098917'])>"
+       "<Cluster(cluster_id='1642117839-p34g', profile='default', controller=<running>, engine_sets=['1642117841'])>"
       ]
      },
      "execution_count": 6,
@@ -198,7 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 8/8 [00:03<00:00,  2.07engine/s]\n"
+      "100%|█████████████████████████████████████████| 8/8 [00:04<00:00,  1.75engine/s]\n"
      ]
     }
    ],
@@ -224,17 +224,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-01-13 19:35:28.125265: W tensorflow/python/util/util.cc:368] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n"
+      "2022-01-14 00:50:48.918442: W tensorflow/python/util/util.cc:368] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: ram://f0635e33-2650-494d-bc1c-b77f19daf462/assets\n",
-      "INFO:tensorflow:Assets written to: ram://1c9e41cb-3a3f-43ff-a0cb-4594250b6c30/assets\n",
-      "INFO:tensorflow:Assets written to: ram://f28bfa1e-90ce-49a5-8127-aeedc75a1033/assets\n",
-      "INFO:tensorflow:Assets written to: ram://d9d91878-3a09-481c-b4cf-7749a5596e7f/assets\n"
+      "INFO:tensorflow:Assets written to: ram://210b8198-f1a1-420e-b445-4e1bf0be3032/assets\n",
+      "INFO:tensorflow:Assets written to: ram://2c0f0ae2-511a-4436-8e65-e70d58ed73aa/assets\n",
+      "INFO:tensorflow:Assets written to: ram://ac5e810a-b498-4629-bd56-9a4adf63e9db/assets\n",
+      "INFO:tensorflow:Assets written to: ram://ad4dde92-39cf-4572-96bd-fa6875639485/assets\n"
      ]
     }
    ],
@@ -360,7 +360,103 @@
    "execution_count": null,
    "id": "d2c14166-4d5b-487d-91b8-7996131084cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "[1. 6. 7. 2. 7. 8.] [[-1.5151733 -2.3078766 -4.1461535 -4.409776  -4.502282  -4.3423414\n",
+      "  -4.8978677 -5.2646585 -5.2973385 -5.2777395 -5.9525795 -5.8582597]]\n",
+      "[ 0.  9.  8.  0.  6. 12.] [[-0.48467842  0.7900464   0.62273175  0.62476206  0.30282605  0.33907458\n",
+      "  -0.10882736  0.02633005 -0.28490824 -0.25639248 -0.19376813  0.60965765]]\n",
+      "5/5 [==============================] - 0s 4ms/step - loss: 1.1414\n",
+      "exchanging weights of 1\n",
+      "[[ 2.56727673e-02  1.61619519e-03 -7.28235185e-01 ...  4.79751140e-01\n",
+      "  -4.98979539e-01  1.69117540e-01]\n",
+      " [-1.10841227e+00 -7.46206760e-01 -9.74427164e-02 ...  3.10011394e-02\n",
+      "   8.63761082e-02  1.03019476e-01]\n",
+      " [-3.65043283e-01  1.92051698e-02 -2.28805494e+00 ... -1.76263824e-01\n",
+      "  -5.91884442e-02 -4.32206720e-01]\n",
+      " ...\n",
+      " [-1.37188047e-01 -3.35514247e-02 -1.71486810e-02 ...  2.46931780e-02\n",
+      "  -1.03919029e-01 -6.60851672e-02]\n",
+      " [ 3.18974070e-02 -1.73724025e-01  8.80493224e-02 ... -1.86241344e-01\n",
+      "  -6.31897599e-02 -8.42750967e-02]\n",
+      " [-8.65327790e-02 -5.61284237e-02 -9.10927802e-02 ...  1.00825109e-01\n",
+      "  -3.98693718e-02 -4.91701476e-02]]\n",
+      "[[ 2.68577188e-02  1.25279045e-03 -7.28414357e-01 ...  4.79110122e-01\n",
+      "  -4.99688745e-01  1.69404551e-01]\n",
+      " [-1.10822034e+00 -7.46583581e-01 -9.74974185e-02 ...  3.09682600e-02\n",
+      "   8.58178139e-02  1.02959305e-01]\n",
+      " [-3.64290118e-01  1.86761264e-02 -2.28872180e+00 ... -1.76907375e-01\n",
+      "  -5.97962923e-02 -4.32238340e-01]\n",
+      " ...\n",
+      " [-1.35921761e-01 -3.40399630e-02 -1.70242116e-02 ...  2.45641079e-02\n",
+      "  -1.04454055e-01 -6.61738068e-02]\n",
+      " [ 3.28463167e-02 -1.74183398e-01  8.81087929e-02 ... -1.86543658e-01\n",
+      "  -6.37318715e-02 -8.43925178e-02]\n",
+      " [-8.50671530e-02 -5.65503985e-02 -9.09484178e-02 ...  1.00776412e-01\n",
+      "  -4.03733253e-02 -4.91020679e-02]]\n",
+      "1\n",
+      "[ 0.  3.  2.  1.  5. 13.] [[-5.7478952  -1.3051832  -0.64076096 -0.6314955  -1.3007598  -0.281279\n",
+      "  -1.3611156  -0.79830104 -0.699059   -0.65706587 -1.4884865  -0.95040685]]\n",
+      "[ 0.  5.  4.  2.  9. 11.] [[-4.331884  -1.5199485 -1.2190869 -1.2123976 -1.5249586 -0.8462553\n",
+      "  -1.553921  -1.3038868 -1.3876224 -1.4640379 -1.6664546 -1.4257958]]\n",
+      "5/5 [==============================] - 0s 3ms/step - loss: 0.7369\n",
+      "2\n",
+      "[ 1.  4.  4.  2.  8. 11.] [[-9.981678   2.2627344  3.032404   3.2296019  3.04878    3.5324738\n",
+      "   3.3908722  3.8573935  3.3855786  3.4116473  3.68362    3.5746741]]\n",
+      "[ 1.  7.  8.  1.  5. 12.] [[-0.9031492 -1.3972293 -2.8078866 -2.996441  -2.773421  -2.6085305\n",
+      "  -2.8364987 -3.1921694 -3.2606049 -3.3170357 -3.7638628 -3.7254188]]\n",
+      "5/5 [==============================] - 0s 3ms/step - loss: 0.6214\n",
+      "3\n",
+      "[ 0.  6.  5.  1. 10. 13.] [[-3.3336577   0.5166968   0.05512187  0.11228066 -0.11364513  0.37721103\n",
+      "   0.260504    0.55134505  0.6079122   0.61202383  0.47926497  0.74607706]]\n",
+      "[ 1.  8.  9.  0.  2. 13.] [[-0.04871556  1.6370842   1.2142037   1.231857    0.78667283  0.7897634\n",
+      "   0.65099657  0.8250127   0.38175952  0.40692058  0.49845576  1.3977234 ]]\n",
+      "5/5 [==============================] - 0s 3ms/step - loss: 0.4169\n",
+      "4\n",
+      "[1. 8. 9. 0. 9. 9.] [[0.05432551 4.9732547  4.8946247  4.884013   4.4575424  4.543769\n",
+      "  3.9821675  4.4533663  3.7028947  4.051034   3.7642858  5.224049  ]]\n",
+      "[0. 9. 8. 0. 4. 9.] [[-0.44840217 -0.1723087  -1.4737214  -1.5303056  -1.7125238  -1.6625665\n",
+      "  -1.947503   -1.9052488  -2.0592098  -2.0701978  -2.0944347  -1.7532955 ]]\n",
+      "5/5 [==============================] - 0s 3ms/step - loss: 0.6546\n",
+      "5\n",
+      "[ 1.  8.  8.  1.  4. 10.] [[-9.9895115 -0.8751211 -1.6420934 -1.8428098 -1.7762146 -2.093022\n",
+      "  -2.2789862 -2.8271425 -3.8174357 -3.8260417 -3.8157945 -4.1656294]]\n",
+      "[ 1.  7.  7.  2.  6. 14.] [[-9.9944162e+00  1.5732199e-03  8.4594667e-02  1.5194149e-01\n",
+      "   2.9528382e-01  5.8220768e-01  6.8562329e-01  9.6593851e-01\n",
+      "  -2.8529892e-02 -5.1093544e-03  7.8734010e-01  4.7273025e-01]]\n",
+      "5/5 [==============================] - 0s 3ms/step - loss: 0.7422\n",
+      "6\n",
+      "[ 1.  7.  7.  2. 10. 11.] [[-9.990187  -2.4709601 -3.0768566 -3.22368   -2.7859826 -2.5304666\n",
+      "  -3.3011122 -3.253705  -4.028621  -3.7702484 -3.5416384 -3.7898211]]\n",
+      "[0.  9.5 9.  0.  2.  9. ] [[-0.05680106 -0.22312227 -1.1694164  -1.2370756  -0.82753474 -0.76536185\n",
+      "  -0.83113647 -0.95194805 -0.7646814  -0.76326376 -0.85078293 -0.9968982 ]]\n",
+      "5/5 [==============================] - 0s 3ms/step - loss: 0.7887\n",
+      "7\n",
+      "[0. 6. 5. 1. 5. 5.] [[-3.593199   2.330675   2.3320987  2.4512892  2.1854546  2.6688218\n",
+      "   2.217042   2.667341   2.601322   2.72515    2.1229472  2.7480063]]\n",
+      "[ 1.  7.  8.  1.  3. 13.] [[-1.0511111 -0.9197733 -2.0937855 -2.2145817 -1.8920872 -1.7162467\n",
+      "  -1.9846557 -2.1222253 -2.0918498 -2.0864155 -2.3744886 -2.3728433]]\n",
+      "5/5 [==============================] - 0s 3ms/step - loss: 0.8143\n",
+      "8\n",
+      "[ 1.  8.  8.  1. 11. 12.] [[-9.983416    0.29115224 -0.10243966 -0.04886372  0.16704215  0.3399738\n",
+      "   0.51703954  0.7030418  -0.29031098 -0.21424381  0.6405084   0.559803  ]]\n",
+      "[ 1.  8.  9.  0.  7. 12.] [[-0.04578976  1.536793    1.0325719   1.046101    0.63706684  0.634922\n",
+      "   0.47885728  0.65096253  0.23812884  0.27309078  0.3303792   1.2127222 ]]\n",
+      "5/5 [==============================] - 0s 3ms/step - loss: 0.5653\n",
+      "9\n",
+      "[ 0.   9.5  9.   0.   5.  14. ] [[-0.01139497  1.9717919   2.2046964   2.2206852   2.1975057   2.1865232\n",
+      "   2.157892    2.1570983   1.9947152   2.048531    1.5933913   1.9759077 ]]\n",
+      "[1. 8. 9. 0. 2. 4.] [[ 0.07333683 -0.149017   -1.8682771  -2.0009992  -2.1721096  -2.1299462\n",
+      "  -2.6569965  -2.560758   -2.646791   -2.5807805  -2.8796031  -2.4350958 ]]\n",
+      "5/5 [==============================] - 0s 3ms/step - loss: 0.6054\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import numpy as np\n",
