--- a/Training/StrengthVillainFlop.ipynb
+++ b/Training/StrengthVillainFlop.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "RT9dOSZE_sJu"
+    "id": "RT9dOSZE_sJu",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "<h1>Train Neural Network To Estimate Average Strenghts and Variations on the Flop </h1>\n",
@@ -26,7 +29,10 @@
      },
      "user_tz": -60
     },
-    "id": "CvlujTMU_XG_"
+    "id": "CvlujTMU_XG_",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -45,7 +51,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "EgQtEKbm_aeS"
+    "id": "EgQtEKbm_aeS",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "<h2>Simulated boards</h2>\n",
@@ -71,7 +80,10 @@
      "user_tz": -60
     },
     "id": "irT9aGFV_0Al",
-    "outputId": "38e5a80f-0db2-4e03-d32d-861dfd17c83b"
+    "outputId": "38e5a80f-0db2-4e03-d32d-861dfd17c83b",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -94,7 +106,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -244,7 +260,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Let's check how accurate those percentages are, running a few of those lines against all possible villains."
    ]
@@ -252,7 +272,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from itertools import combinations\n",
@@ -267,7 +291,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#function that takes in a row from the dataFrame and creates the list for hands usable in the compare function. The compare function, that chesk which hand won, needs lists of tuples as input.\n",
@@ -280,7 +308,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "80 tousand boards might not be enough to train on. Let's create more boards."
    ]
@@ -288,7 +320,11 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -319,7 +355,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "and simulate nwin, nloose, and nsplit"
    ]
@@ -327,7 +367,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#This function takes in the deck, the board and simulates pwin, plosse and psplit. The firs four entries in one array are hero's cards. The following six represent the flop.\n",
@@ -357,7 +401,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#To increase speed we want to simulate runouts on 8 threads simulatanously. The map.sync-function from ipyparallel needs one fucniton with number of threads as parameter.\n",
@@ -373,7 +421,11 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -404,7 +456,11 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -422,7 +478,11 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#Let's give the threads the necessary objects.\n",
@@ -437,7 +497,11 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "results = rc[:].map_sync(simulateMulti,range(8))\n"
@@ -445,7 +509,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Let's combine the boards with the respective results."
    ]
@@ -453,7 +521,11 @@
   {
    "cell_type": "code",
    "execution_count": 259,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -474,7 +546,11 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -601,7 +677,11 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -624,7 +704,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "concat the two data frames."
    ]
@@ -632,7 +716,11 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -654,7 +742,11 @@
   {
    "cell_type": "code",
    "execution_count": 283,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -804,7 +896,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "and finally lets add the initial 80k hands to the dataframe."
    ]
@@ -812,7 +908,11 @@
   {
    "cell_type": "code",
    "execution_count": 286,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1075,7 +1175,11 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "simHandsFlopLarge.to_csv(dataFolder+'simHandsFlopLarge.csv', index= None)"
@@ -1084,7 +1188,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "simHandsFlopLarge = pd.read_csv(dataFolder+'simHandsFlopLarge.csv')"
@@ -1092,7 +1200,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We are going to train a model to predict pwin, ploose, and psplit. It would take too long to simulate Average villain strengths and std for 95% of the boards. We need a very precise model, because we are going to use the results of this model to train another model, which estimates all five values."
    ]
@@ -1100,7 +1212,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1139,7 +1255,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -1161,7 +1281,10 @@
      },
      "user_tz": -60
     },
-    "id": "P6Qh4vyzNEa6"
+    "id": "P6Qh4vyzNEa6",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -1174,7 +1297,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "lr = 0.00000001\n",
@@ -1185,7 +1312,11 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1213,7 +1344,11 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "modelFlopNew.save(modelsFolder+'strengthFlopCorrected.h5')"
@@ -1221,14 +1356,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Let's generate a model."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "<h2>Simulating average hand strengths for training data </h2>\n",
     "Now that we have a propper network to evaluate individual hand strengths, let's generate training data for average hand strengths. Instead of providing one single hand for hero, we will use all possible combinations, estimate win and loose percentages. Win and loose should be equal. This will also be our sanity check. Because the win and loose probabilities are estimated by a network, they will have some error. So we will use the mean of both as estimator for the strength of average hands. Win-loose- and split percenteges are euqivalent, because they can be calculated from each other. \n",
@@ -1238,7 +1381,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1260,7 +1407,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#Function takes in a row from the data frame and calculates pwin/ploose, stdwin, stdloose\n",
@@ -1288,7 +1439,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "E22uh0m_O16X"
+    "id": "E22uh0m_O16X",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -1303,7 +1457,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1456,7 +1614,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "results = pd.DataFrame(columns=['pwin', 'ploose', 'psplit', 'stdwin', 'stdsplit'], data =np.array(results))\n",
@@ -1465,7 +1627,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "<h2>Final DataFrame for Training the Full Strength Evaluator for the Flop </h2>\n",
     "Now let's add all values that simulated to the data frame, so we can train a model to predict those values. We will add pwin and ploose for hero, as the probabity fo split is equivalent (1-pwin-ploose). We will add the probability of split pot  for villain (the probability for pwin and ploose is equivalent), the standard deviation for the aggregate pwinVil and plooseVil and a standard deviation for split pot."
@@ -1474,7 +1640,11 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1650,7 +1820,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1814,7 +1988,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1978,7 +2156,11 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "input_dims = 10\n",
@@ -2007,7 +2189,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -2030,7 +2216,10 @@
      },
      "user_tz": -60
     },
-    "id": "P6Qh4vyzNEa6"
+    "id": "P6Qh4vyzNEa6",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -2053,7 +2242,11 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2099,7 +2292,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "strengthFlopTotal = load_model(modelsFolder+'strengthFlop3.h5')\n",
@@ -2111,7 +2308,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2156,7 +2357,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2200,7 +2405,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2245,7 +2454,11 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2274,7 +2487,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2301,7 +2518,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "strengthFlopTotal.save(modelsFolder+'strengthFlop3.h5')"
@@ -2310,7 +2531,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
