--- a/Training/PokerAI10BB.ipynb
+++ b/Training/PokerAI10BB.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "9431e6d4-b0d7-4bf1-a845-59012120ccdc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import keras.backend as K\n",
@@ -17,7 +21,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "625467e1-0f0a-42d3-980f-d45525538605",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "lr = 0.001\n",
@@ -35,7 +43,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "b9ff1db9-4fdd-4b04-89cd-c60af63c69d2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "newAgent = Agent2(lr, gamma, n_actions, 0.2, batch_size, input_dims, stacksize, fname = fname, handEval=True, layerSizes=layerSizes,mem_size=100000)\n",
@@ -48,7 +60,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "661f865a-f47f-4649-95eb-8b268bbe7170",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "stack_hero = stacksize\n",
@@ -61,7 +77,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "5dfda127-0de2-4604-b9a6-fc34b73edef6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "game = HUPoker(stack_hero, stack_villain, agentHero, agentVillain)"
@@ -71,7 +91,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2375c19f-c29c-4387-80c4-d1551c5518e9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#normal hand by hand approach in learning\n",
@@ -146,7 +170,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "8fbc1acc-423c-4b4a-8662-c3aa585d2c3d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -176,7 +204,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "1e3d756e-f718-48e4-bc50-6bbb6331f48f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -195,7 +227,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "ddc79fc6-be6b-4844-ae0f-aac9aa683ae9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -343,7 +379,11 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "d2c14166-4d5b-487d-91b8-7996131084cf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -402,12 +442,12 @@
      "evalue": "Result not ready.",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTimeoutError\u001b[0m                              Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [26]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m terminals\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(nCores):\n\u001b[0;32m---> 18\u001b[0m     states\u001b[38;5;241m.\u001b[39mappend(\u001b[43mmemoryList\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstates\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     19\u001b[0m     states_\u001b[38;5;241m.\u001b[39mappend(memoryList[i][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstates_\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     20\u001b[0m     rewards\u001b[38;5;241m.\u001b[39mappend(memoryList[i][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrewards\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/ipyparallel/client/asyncresult.py:698\u001b[0m, in \u001b[0;36mAsyncResult.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    696\u001b[0m \u001b[38;5;124;03m\"\"\"getitem returns result value(s) if keyed by int/slice, or metadata if key is str.\"\"\"\u001b[39;00m\n\u001b[1;32m    697\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mint\u001b[39m):\n\u001b[0;32m--> 698\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_check_ready\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    699\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_collect_exceptions([\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mresult()[key]])[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m    700\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mslice\u001b[39m):\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/ipyparallel/client/asyncresult.py:381\u001b[0m, in \u001b[0;36mAsyncResult._check_ready\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    379\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_check_ready\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    380\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mready():\n\u001b[0;32m--> 381\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTimeoutError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResult not ready.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mTimeoutError\u001b[0m: Result not ready."
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTimeoutError\u001B[0m                              Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [26]\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     15\u001B[0m terminals\u001B[38;5;241m=\u001B[39m[]\n\u001B[1;32m     17\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(nCores):\n\u001B[0;32m---> 18\u001B[0m     states\u001B[38;5;241m.\u001B[39mappend(\u001B[43mmemoryList\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mstates\u001B[39m\u001B[38;5;124m'\u001B[39m])\n\u001B[1;32m     19\u001B[0m     states_\u001B[38;5;241m.\u001B[39mappend(memoryList[i][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mstates_\u001B[39m\u001B[38;5;124m'\u001B[39m])\n\u001B[1;32m     20\u001B[0m     rewards\u001B[38;5;241m.\u001B[39mappend(memoryList[i][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mrewards\u001B[39m\u001B[38;5;124m'\u001B[39m])\n",
+      "File \u001B[0;32m~/.local/lib/python3.8/site-packages/ipyparallel/client/asyncresult.py:698\u001B[0m, in \u001B[0;36mAsyncResult.__getitem__\u001B[0;34m(self, key)\u001B[0m\n\u001B[1;32m    696\u001B[0m \u001B[38;5;124;03m\"\"\"getitem returns result value(s) if keyed by int/slice, or metadata if key is str.\"\"\"\u001B[39;00m\n\u001B[1;32m    697\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(key, \u001B[38;5;28mint\u001B[39m):\n\u001B[0;32m--> 698\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_check_ready\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    699\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_collect_exceptions([\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mresult()[key]])[\u001B[38;5;241m0\u001B[39m]\n\u001B[1;32m    700\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(key, \u001B[38;5;28mslice\u001B[39m):\n",
+      "File \u001B[0;32m~/.local/lib/python3.8/site-packages/ipyparallel/client/asyncresult.py:381\u001B[0m, in \u001B[0;36mAsyncResult._check_ready\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    379\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m_check_ready\u001B[39m(\u001B[38;5;28mself\u001B[39m):\n\u001B[1;32m    380\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mready():\n\u001B[0;32m--> 381\u001B[0m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mTimeoutError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mResult not ready.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[0;31mTimeoutError\u001B[0m: Result not ready."
      ]
     }
    ],
@@ -491,7 +531,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "dfc30b3a-f83c-4a47-ac3b-3928066afbef",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#save villain weights\n",
